<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/tv_home_city_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/bogor"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tv_home_date"
        app:layout_constraintStart_toStartOf="@+id/tv_home_date"
        app:layout_constraintTop_toBottomOf="@+id/tv_home_date" />

    <TextView
        android:id="@+id/tv_home_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/tue_13_april_2020"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_state_temperatur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/_32"
        android:textSize="70sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_home_city_name"
        app:layout_constraintStart_toStartOf="@+id/tv_home_city_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_home_city_name" />

    <TextView
        android:id="@+id/tv_celsius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@+id/tv_state_temperatur"
        app:layout_constraintTop_toTopOf="@+id/tv_state_temperatur" />

    <ImageView
        android:id="@+id/iv_state_picture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/image_view"
        android:src="@drawable/ic_02d"
        app:layout_constraintEnd_toEndOf="@+id/tv_home_date"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_home_date"
        app:layout_constraintTop_toBottomOf="@+id/tv_state_temperatur" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_pressure"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="55dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_state_picture">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TextView
                android:id="@+id/tv_pressure_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/pressure"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.509"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_pressure_home" />

            <TextView
                android:id="@+id/tv_pressure_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/_1011"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@+id/iv_pressure_lable"
                app:layout_constraintStart_toStartOf="@+id/iv_pressure_lable"
                app:layout_constraintTop_toBottomOf="@+id/iv_pressure_lable" />

            <ImageView
                android:id="@+id/iv_pressure_lable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:src="@drawable/ic_pressure"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/image_view" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_wind"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/cv_pressure"
        app:layout_constraintStart_toEndOf="@+id/cv_pressure"
        app:layout_constraintTop_toTopOf="@+id/cv_pressure">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_wind_lable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:contentDescription="@string/image_view"
                android:src="@drawable/ic_wind"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_wind_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/_2_57"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@+id/iv_wind_lable"
                app:layout_constraintStart_toStartOf="@+id/iv_wind_lable"
                app:layout_constraintTop_toBottomOf="@+id/iv_wind_lable" />

            <TextView
                android:id="@+id/tv_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_wind_home"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_sunrise"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="30dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/cv_wind"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_wind"
        app:layout_constraintTop_toTopOf="@+id/cv_wind">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_sunrise_lable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/image_view"
                android:src="@drawable/ic_sunrise"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_sunrise_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/_05_52_am"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/iv_sunrise_lable"
                app:layout_constraintStart_toStartOf="@+id/iv_sunrise_lable"
                app:layout_constraintTop_toBottomOf="@+id/iv_sunrise_lable" />

            <TextView
                android:id="@+id/tv_sunrise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/sunrise"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_sunrise_home"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_humidity"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="@+id/cv_pressure"
        app:layout_constraintStart_toStartOf="@+id/cv_pressure"
        app:layout_constraintTop_toBottomOf="@+id/cv_pressure">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_humidity_lable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:src="@drawable/ic_humidity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/image_view" />

            <TextView
                android:id="@+id/tv_humidity_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/_66"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@+id/iv_humidity_lable"
                app:layout_constraintStart_toStartOf="@+id/iv_humidity_lable"
                app:layout_constraintTop_toBottomOf="@+id/iv_humidity_lable" />

            <TextView
                android:id="@+id/tv_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/humidity"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_humidity_home" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_visibility"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="@+id/cv_wind"
        app:layout_constraintStart_toStartOf="@+id/cv_wind"
        app:layout_constraintTop_toBottomOf="@+id/cv_wind">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_visibilty_lable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:src="@drawable/ic_visibility"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/image_view" />

            <TextView
                android:id="@+id/tv_visibilty_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/_9000"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@+id/iv_visibilty_lable"
                app:layout_constraintStart_toStartOf="@+id/iv_visibilty_lable"
                app:layout_constraintTop_toBottomOf="@+id/iv_visibilty_lable" />

            <TextView
                android:id="@+id/tv_visibilty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visibility"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_visibilty_home" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_sunset"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="@+id/cv_sunrise"
        app:layout_constraintStart_toStartOf="@+id/cv_sunrise"
        app:layout_constraintTop_toBottomOf="@+id/cv_sunrise">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_sunset_lable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_sunset"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/image_view" />

            <TextView
                android:id="@+id/tv_sunset_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/_05_51_pm"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/iv_sunset_lable"
                app:layout_constraintStart_toStartOf="@+id/iv_sunset_lable"
                app:layout_constraintTop_toBottomOf="@+id/iv_sunset_lable" />

            <TextView
                android:id="@+id/tv_sunset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunset"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_sunset_home" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Condition"
        app:layout_constraintEnd_toEndOf="@+id/tv_state_temperatur"
        app:layout_constraintStart_toStartOf="@+id/tv_state_temperatur"
        app:layout_constraintTop_toBottomOf="@+id/tv_state_temperatur" />

    <ProgressBar
        android:id="@+id/pb_loading_home"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.418" />

</androidx.constraintlayout.widget.ConstraintLayout>